--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".setNumberOfSpies"></activity>
+        <activity android:name=".GameStart"></activity>
+        <activity android:name=".setNumberOfSpies" />
         <activity android:name=".GameSettings" />
         <activity android:name=".MainActivity">
             <intent-filter>
