--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.undercover"
+        applicationId "com.AugustineLabs.bluff"
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
